# nameless

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
examples/: args.rs  basic.rs  cat.rs  clap.rs  copy.rs  copy_with_defaults.rs  grep.rs  kommand.rs  repl-child.rs  repl-client.rs  repl.rs  sleep.rs  structopt.rs  text-cat.rs  text-grep.rs
kommand/: Cargo.toml  README.md
kommand/examples/: add.rs
kommand/src/: lib.rs
reaktor/: COPYRIGHT  Cargo.toml  README.md
reaktor/src/: lib.rs
src/: buf_reader_line_writer.rs  buf_reader_line_writer_shim.rs  buf_reader_writer.rs  child_stdin_stdout.rs  clap.rs  command_stdin_stdout.rs  input_byte_stream.rs  input_text_stream.rs  interact_terminal_ext.rs  interactive_byte_stream.rs  interactive_text_stream.rs  lazy_output.rs  lib.rs  media_type.rs  open_input.rs  open_interactive.rs  open_output.rs  output_byte_stream.rs  output_text_stream.rs  path_to_name.rs  path_url.rs  pseudonym.rs  read_write.rs  stdin_stdout.rs  stdio_lockers.rs  stdio_raw.rs  summon_bat.rs  type.rs
src/buffered/: buf_reader_line_writer.rs  buf_reader_line_writer_shim.rs  buf_reader_writer.rs  bufreader.rs  bufwriter.rs  linewriter.rs  linewritershim.rs  mod.rs  tests.rs
