[package]
name = "nameless"
version = "0.2.3-alpha.0"
description = "Portable everything-is-a-URL"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["cli", "file", "network"]
categories = ["command-line-interface", "filesystem", "network-programming"]
repository = "https://github.com/sunfishcode/nameless"
readme = "README.md"

[build-dependencies]
rustc_version = "0.3.3"

[dependencies]
anyhow = "1.0.35"
char-device = "0.3.0"
clap = { version = "3.0.0-beta.2", package = "nameless-clap" }
data-url = "0.1.0"
duplex = { version = "0.3.0", features = ["ssh2"] }
flate2 = "1.0.19"
layered-io = { version = "0.4.0", features = ["terminal-io"] }
io-streams = { version = "0.3.0", features = ["layered-io", "terminal-io", "use_char_device", "use_socketpair"] }
io-arrays = "0.3.0"
libc = "0.2.87"
mime = "0.3.16"
mime_guess = "2.0.3"
percent-encoding = "2.1.0"
basic-text = { version = "0.2.4", features = ["terminal-io"] }
unsafe-io = "0.6.2"
ureq = { version = "2.0.0", default-features = false, features = ["tls", "charset"] }
url = "2.2.0"
terminal-io = "0.3.0"
ssh2 = { version = "0.9.0", optional = true }
system-interface = { version = "0.6.2", features = ["ssh2"] }
utf8-io = { version = "0.4.0", features = ["layered-io", "terminal-io"] }
whoami = "1.1.0"

[target.'cfg(not(windows))'.dependencies]
posish = "0.6.1"
shell-words = "1.0.0"

[target.'cfg(windows)'.dependencies]
atty = "0.2.14"

[dev-dependencies]
humantime = "2.0.1"
kommand = { path = "kommand" }
reaktor = { path = "reaktor" }
regex = "1.4.2"
itertools = "0.10.0"
clap_derive = { version = "3.0.0-beta.2", package = "nameless-clap_derive" }

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
  "kommand",
  "reaktor",
]
