[package]
name = "nameless"
version = "0.0.0"
description = "Portable everything-is-a-URL"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["cli", "file", "network"]
categories = ["command-line-interface", "filesystem", "network-programming"]
repository = "https://github.com/sunfishcode/nameless"
readme = "README.md"

[build-dependencies]
rustc_version = "0.3.0"

[dependencies]
anyhow = "1.0.35"
data-url = "0.1.0"
flate2 = "1.0.19"
io-ext = { path = "../io-ext" }
io-ext-adapters = { path = "../io-ext-adapters", features = ["terminal-support"] }
io-handles = { path = "../io-handles", features = ["io-ext", "terminal-support"] }
memchr = "2.3.4"
mime = "0.3.16"
mime_guess = "2.0.3"
percent-encoding = "2.1.0"
text-formats = { path = "../text-formats", features = ["terminal-support"] }
unsafe-io = { path = "../unsafe-io" }
readwrite = { version = "0.1.2", optional = true }
ureq = { version = "1.5.4", default-features = false, features = ["tls", "charset"] }
url = "2.2.0"
terminal-support = { path = "../terminal-support" }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.80"
posish = { path = "../posish" }
shell-words = "1.0.0"

[target.'cfg(windows)'.dependencies]
atty = "0.2.14"

[dev-dependencies]
humantime = "2.0.1"
kommand = { path = "kommand" }
reaktor = { path = "reaktor" }
regex = "1.4.2"
clap = { path = "../clap" }
clap_derive = { path = "../clap/clap_derive" }
itertools = "0.9.0"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
  "kommand",
  "reaktor",
]
