[package]
name = "nameless"
version = "0.9.1-alpha.0"
description = "Portable everything-is-a-URL"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["cli", "file", "network"]
categories = ["command-line-interface", "filesystem", "network-programming"]
repository = "https://github.com/sunfishcode/nameless"
exclude = ["/.github"]

[dependencies]
anyhow = "1.0.35"
char-device = { git = "https://github.com/sunfishcode/char-device", branch = "rustix-0.35.6-beta.2" }
clap = { version = "3.0.0-beta.2", package = "nameless-clap" }
data-url = "0.1.0"
duplex = { git = "https://github.com/sunfishcode/duplex", branch = "rustix-0.35.6-beta.2" }
flate2 = "1.0.19"
layered-io = { git = "https://github.com/sunfishcode/layered-io", branch = "rustix-0.35.6-beta.2", features = ["terminal-io"] }
io-streams = { git = "https://github.com/sunfishcode/io-streams", branch = "rustix-0.35.6-beta.2", features = ["layered-io", "terminal-io", "use_char_device", "use_socketpair"] }
io-arrays = { git = "https://github.com/sunfishcode/io-arrays", branch = "rustix-0.35.6-beta.2" }
mime = "0.3.16"
mime_guess = "2.0.3"
percent-encoding = "2.1.0"
basic-text = { git = "https://github.com/sunfishcode/basic-text", branch = "rustix-0.35.6-beta.2", features = ["terminal-io"] }
io-extras = "0.15.0"
ureq = { version = "2.0.0", default-features = false, features = ["tls", "charset"] }
url = "2.2.0"
terminal-io = { git = "https://github.com/sunfishcode/terminal-io", branch = "rustix-0.35.6-beta.2" }
ssh2 = { version = "0.9.0", optional = true }
system-interface = { git = "https://github.com/sunfishcode/system-interface", branch = "rustix-0.35.6-beta.2", features = ["ssh2"] }
utf8-io = { git = "https://github.com/sunfishcode/utf8-io", branch = "rustix-0.35.6-beta.2", features = ["layered-io", "terminal-io"] }
whoami = "1.1.0"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.35.6-beta.2", features = ["process"] }
shell-words = "1.0.0"

[target.'cfg(windows)'.dependencies]
atty = "0.2.14"
libc = "0.2.99"

[dev-dependencies]
humantime = "2.0.1"
kommand = { path = "kommand" }
reaktor = { path = "reaktor" }
regex = "1.4.2"
itertools = "0.10.0"
clap_derive = { version = "3.0.0-beta.2", package = "nameless-clap_derive" }

[workspace]
members = [
  "kommand",
  "reaktor",
]
