[package]
name = "kommand"
version = "0.0.0"
description = "Command-line arguments via function arguments"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["cli", "macro", "main", "parser"]
categories = ["command-line-interface", "command-line-utilities", "parsing", "rust-patterns"]
repository = "https://github.com/sunfishcode/nameless"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.54", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.2", features = ["nightly"] }
quote = "1.0.2"

[dev-dependencies]
clap = { git = "https://github.com/sunfishcode/clap", branch = "auto" }
clap_derive = { git = "https://github.com/sunfishcode/clap", branch = "auto" }

[badges]
maintenance = { status = "actively-developed" }
