[package]
name = "kommand"
version = "0.7.1"
description = "Command-line arguments via function arguments"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["cli", "macro", "main", "parser"]
categories = ["command-line-interface", "command-line-utilities", "parsing", "rust-patterns"]
repository = "https://github.com/sunfishcode/nameless"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
syn = { version = "1.0.54", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2 = { version = "1.0.2", features = ["nightly"] }
quote = "1.0.2"
pulldown-cmark = "0.9.0"

[dev-dependencies]
clap = { version = "3.0.0-beta.2", package = "nameless-clap" }
clap_derive = { version = "3.0.0-beta.2", package = "nameless-clap_derive" }
nameless = { path = ".." }

[badges]
maintenance = { status = "actively-developed" }
