[package]
name = "reaktor"
version = "0.0.1-alpha.0"
description = "Reaktor"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["cli", "macro", "main", "parser"]
categories = ["command-line-interface", "command-line-utilities", "parsing", "rust-patterns"]
repository = "https://github.com/sunfishcode/nameless"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.54", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.2", features = ["nightly"] }
quote = "1.0.2"

[dev-dependencies]
clap = "3.0.0-beta.2"
clap_derive = "3.0.0-beta.2"

[badges]
maintenance = { status = "actively-developed" }
